// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-bdVaJa NIJn"
>
  <span>
    <em>
      No File Selected
    </em>
  </span>
  <button
    className="ant-btn ant-btn-ghost ant-btn-round"
    onClick={[Function]}
    type="button"
  >
    <span>
      Clear
    </span>
  </button>
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="sc-bdVaJa NIJn"
>
  <span>
    test.json
  </span>
  <button
    className="ant-btn ant-btn-ghost ant-btn-round"
    onClick={[Function]}
    type="button"
  >
    <span>
      Clear
    </span>
  </button>
</div>
`;
